k8s/monitoring/grafana/grafana.dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-core
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
      component: core
   strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
       serviceAccount: grafana
      securityContext:
        fsGroup: 472
         runAsUser: 472
