k8s/monitoring/grafana/grafana.g.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: production
spec:
  ingressClassName: nginx
  rules:
    - host: foxcastor.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - foxcastor.com.ng
      secretName: production-cluster-issuer
